--- a/yeti_software.ioc
+++ b/yeti_software.ioc
@@ -8,9 +8,10 @@ Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
 Mcu.IP5=TIM2
-Mcu.IP6=USB
-Mcu.IP7=USB_DEVICE
-Mcu.IPNb=8
+Mcu.IP6=TIM14
+Mcu.IP7=USB
+Mcu.IP8=USB_DEVICE
+Mcu.IPNb=9
 Mcu.Name=STM32F042K(4-6)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
@@ -20,7 +21,8 @@ Mcu.Pin11=PB8
 Mcu.Pin12=VP_CRC_VS_CRC
 Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin15=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin15=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin16=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PA5
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
@@ -29,7 +31,7 @@ Mcu.Pin6=PA11
 Mcu.Pin7=PA12
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=16
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042K6Tx
@@ -40,6 +42,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USB_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PA11.Mode=Device
 PA11.Signal=USB_DM
@@ -52,8 +55,7 @@ PA14.Signal=SYS_SWCLK
 PA15.Mode=Activate_NOE
 PA15.Signal=USB_NOE
 PA4.Locked=true
-PA4.Mode=NSS_Signal_Hard_Output
-PA4.Signal=SPI1_NSS
+PA4.Signal=GPIO_Output
 PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
@@ -64,7 +66,7 @@ PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PB0.Locked=true
-PB0.Signal=GPIO_Input
+PB0.Signal=GPXTI0
 PB8.Locked=true
 PB8.Signal=GPIO_Input
 PCC.Checker=false
@@ -99,47 +101,61 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=yeti_can.ioc
-ProjectManager.ProjectName=yeti_can
+ProjectManager.ProjectFileName=yeti_software.ioc
+ProjectManager.ProjectName=yeti_software
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_CRC_Init-CRC-false-HAL-true
-RCC.AHBFreq_Value=20000000
-RCC.APB1Freq_Value=20000000
-RCC.APB1TimFreq_Value=20000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true
+RCC.AHBFreq_Value=48000000
+RCC.APB1Freq_Value=48000000
+RCC.APB1TimFreq_Value=48000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.FCLKCortexFreq_Value=20000000
+RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=20000000
+RCC.HCLKFreq_Value=48000000
 RCC.HSE_VALUE=20000000
 RCC.HSICECFreq_Value=32786.88524590164
-RCC.I2SFreq_Value=20000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLDivider,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,USBClockSelection,USBFreq_Value,VCOOutput2Freq_Value
-RCC.MCOFreq_Value=20000000
+RCC.I2SFreq_Value=48000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLDivider,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,USBClockSelection,USBFreq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=48000000
 RCC.PLLCLKFreq_Value=48000000
 RCC.PLLDivider=RCC_PREDIV_DIV5
 RCC.PLLMCOFreq_Value=48000000
 RCC.PLLMUL=RCC_PLL_MUL12
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.SYSCLKFreq_VALUE=20000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSE
-RCC.TimSysFreq_Value=20000000
-RCC.USART1Freq_Value=20000000
+RCC.SYSCLKFreq_VALUE=48000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI48
+RCC.TimSysFreq_Value=48000000
+RCC.USART1Freq_Value=48000000
 RCC.USBClockSelection=RCC_USBCLKSOURCE_PLL
 RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=4000000
-SPI1.CalculateBaudRate=10.0 MBits/s
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.CalculateBaudRate=1.5 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,TIMode,DataSize,NSSPMode
 SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualNSS=VM_NSSHARD
+SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
+SPI1.TIMode=SPI_TIMODE_DISABLE
 SPI1.VirtualType=VM_MASTER
+TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM14.IPParameters=AutoReloadPreload,Prescaler,Period
+TIM14.Period=40000
+TIM14.Prescaler=500
+USB_DEVICE.APP_RX_DATA_SIZE=600
+USB_DEVICE.APP_TX_DATA_SIZE=600
 USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PRODUCT_STRING_CDC_FS,VID,PID_CDC_FS
+USB_DEVICE.INTERFACE_STRING_CDC_FS=CDC Interface
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PRODUCT_STRING_CDC_FS,VID,PID_CDC_FS,APP_RX_DATA_SIZE,APP_TX_DATA_SIZE,USBD_MAX_STR_DESC_SIZ,USBD_DEBUG_LEVEL,MANUFACTURER_STRING,INTERFACE_STRING_CDC_FS
+USB_DEVICE.MANUFACTURER_STRING=Revolve NTNU
 USB_DEVICE.PID_CDC_FS=0x5760
 USB_DEVICE.PRODUCT_STRING_CDC_FS=YetiCAN-FD
+USB_DEVICE.USBD_DEBUG_LEVEL=0
+USB_DEVICE.USBD_MAX_STR_DESC_SIZ=256
 USB_DEVICE.VID=0x5740
 USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
@@ -147,6 +163,8 @@ VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
