Generate MX peripheral drivers as h/c pair
Signed-off-by: Kolbjørn Austreng <kolbjorn.austreng@ntnu.no>

--- a/yeti_software.ioc
+++ b/yeti_software.ioc
@@ -85,7 +85,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -146,16 +146,17 @@ TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM14.IPParameters=AutoReloadPreload,Prescaler,Period
 TIM14.Period=40000
 TIM14.Prescaler=500
-USB_DEVICE.APP_RX_DATA_SIZE=600
-USB_DEVICE.APP_TX_DATA_SIZE=600
+USB_DEVICE.APP_RX_DATA_SIZE=512
+USB_DEVICE.APP_TX_DATA_SIZE=512
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.INTERFACE_STRING_CDC_FS=CDC Interface
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PRODUCT_STRING_CDC_FS,VID,PID_CDC_FS,APP_RX_DATA_SIZE,APP_TX_DATA_SIZE,USBD_MAX_STR_DESC_SIZ,USBD_DEBUG_LEVEL,MANUFACTURER_STRING,INTERFACE_STRING_CDC_FS
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PRODUCT_STRING_CDC_FS,VID,PID_CDC_FS,APP_RX_DATA_SIZE,APP_TX_DATA_SIZE,USBD_MAX_STR_DESC_SIZ,USBD_DEBUG_LEVEL,MANUFACTURER_STRING,INTERFACE_STRING_CDC_FS,USBD_SELF_POWERED
 USB_DEVICE.MANUFACTURER_STRING=Revolve NTNU
 USB_DEVICE.PID_CDC_FS=0x5760
 USB_DEVICE.PRODUCT_STRING_CDC_FS=YetiCAN-FD
 USB_DEVICE.USBD_DEBUG_LEVEL=0
 USB_DEVICE.USBD_MAX_STR_DESC_SIZ=256
+USB_DEVICE.USBD_SELF_POWERED=1
 USB_DEVICE.VID=0x5740
 USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
